--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^15.1.3",
@@ -66,8 +67,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
-    "file-saver": "^2.0.5",
-    "xlsx": "^0.18.5"
+    "zustand": "^5.0.3"
   }
 }
