--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7"
   }
 }
